[tool.pysen]
version = "0.10"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = false
mypy_preset = "strict"
line_length = 88
py_version = "py37"

# [build-system]
# requires = ["maturin>=1.0,<2.0", "setuptools>=42", "wheel", "cffi>=1.0.0"]
# build-backend = "maturin"

# [[tool.pysen.lint.mypy_targets]]
#   paths = ["./pacsmd/*"]
